--- a/금리채권/금리.md
+++ b/금리채권/금리.md
@@ -6,6 +6,12 @@
 - 금리의 단위는 퍼센트포인트이다. 
 - 0.01%포인트는 1bp(basis point)
 
+- 명목금리  / 실질금리
+  - 명목금리 : 화폐가치를 고려하지 않은 금리
+  - 실질금리 : 명목금리에서 물가상승률을 뺀 나머지
+  - ex ) 1년 정기예금 이자율이 10%일 때, 물가상승률이 8%이면
+  - -> 명목금리 10%, 실질금리 2%
+
 
 
 2. 이자율, 금리, 수익률, 할인률
@@ -172,12 +178,13 @@
 
 11. 환율과 금리
 
-    - 원/달러 환율이란 1달러와 원화 간의 교환시 필요한 원화를 나타냄
-    - 환율인상 -> 원화의 평가가치 절하
-    - 이전에 환율이 1달러에 1000원이었다가 1200이 되면, 원화가치가 낮아져 더 많은 원화가 필요하게 됨
-    - 환율을 낮추기 위해서는 금리를 인상하면 됨
-    - 한국의 금리가 높아지면 한국에 투자하기 위해 원화를 요구하는 사람이 많아지고,
-    - 원화의 가치가 상승하여 금리의 차이만큼 환율이 하락함
+
+- 원/달러 환율이란 1달러와 원화 간의 교환시 필요한 원화를 나타냄
+- 환율인상 -> 원화의 평가가치 절하
+- 이전에 환율이 1달러에 1000원이었다가 1200이 되면, 원화가치가 낮아져 더 많은 원화가 필요하게 됨
+- 환율을 낮추기 위해서는 금리를 인상하면 됨
+- 한국의 금리가 높아지면 한국에 투자하기 위해 원화를 요구하는 사람이 많아지고,
+- 원화의 가치가 상승하여 금리의 차이만큼 환율이 하락함
 
 
 
