--- a/금리채권/금리.md
+++ b/금리채권/금리.md
@@ -80,13 +80,58 @@
 
    
 
-6. 채권이란 무엇인가
+   5) 예금/대출 금리
+
+   - 대출금리 = 예금금리를 포함한 각종 조달금리(콜,CD,후순위채권) + 업무원가율 + 적정마진
+
+   - 실질적 대출 금리 = 우대금리 + 고객별 예상손실율
+
+   
+
+   6) 정책금리
+
+   - 한국은행이 통화정책을 펴기위해 조절하는 금리 
+   - 경기가 위축되면 금리를 낮춰 유동성을 공급하고, 경기가 과열되면 금리를 높여 자금을 흡수함
+
+   
+
+   7) 리보금리
+
+   - 런던의 우량 은행들이 단기자금을 거래할 때 적용하는 금리
+   - 국제 금융시장에서 자금을 융통할 때 쓰는 기준금리
+
+   
+
+   8) 가산금리
+
+   - 스프레드라고도 하며 신용도에 따라 가산금리가 추가된다
+   - AAA~D까지 신용도에 따라 금리가 추가되는 정도가 다르다
+
+   
+
+   9) 통화채금리
+
+   - 통화량을 조절하는 채권에 붙는 금리
+   - 통화안정증권, 외국환평형기금채권, 재정증권 
+   - 시중에 유동성이 부족하면 통안증권을 매입하고, 유동성이 풍부하면 통안증권을 매도
+   - 시중에 달러가 부족하면 외평채를 발행하여 달러를 매입
+   - 재정증권은 국고금 출납의 효율적 수행을 위해 발행
+
+
+
+5. 채권이란 무엇인가
 
 - 적정 이자를 지급하고 만기에 원금을 갚는 차용증서
 - 차용증서와 다른 점 -> 만기 이전에 다른 투자자에게 할인하여 양도할 수 있음. 매매가능
 - 채권은 증권회사에서 거래되는 유가증권 
 - 채권의 금리는 고정금리 
 - 따라서 변동하는 시장의 금리와 구분하기 위해 채권의 금리를 쿠폰금리(표면금리) 라고 함
+
+
+
+- 자금운용 : 주식은 현금화하는데 시간이 걸리는 반면, 채권은 당일 현금화 가능
+- 확정이자 : 채권은 발행시에 이자/이자율이 확정되어 있음
+- 기한부증권 : 채권은 원리금 상환기간이 정해져 있고, 증권회사를 통해 거래가 되는 유가증권
 
 
 
