--- a/금리채권/금리 심화.md
+++ b/금리채권/금리 심화.md
@@ -1,27 +1,98 @@
 ## 금리 심화
 
-1. 만기 수익률 (YTM)
-
-- 현재의 가격에 내재된 채권의 수익률
-- 만기 수익률 = 유통 수익률 = 내부수익률(투자수익률) = 시장수익률
-- 투자자가 채권을 현재가격에 매입해서 만기일까지 보유하면 얻게되는 수익률 
-
-
-
-2. 현물 이자율(Spot Rate)
-
-- 현재 시점에서 투자할 때 실현할 수 있는 만기별 연간 수익률
-- 단, 만기까지 CashFlow가 한번만 발생(만기시점에) 하는 채권
-- 즉, 무이표채(Zero-coupon bond)의 YTM = Spot Rate
-- 또한, 미래 현금흐름을 현재가치로 할인하는 할인율의 의미로도 이용됨.
+1. Swap Rate
+   - 변동금리와 교횐되는 고정금리
+   - 즉, 변동금리의 가치
+   - Swap Rate = AVG(Offer,Bid)
+   - Offer금리란 조성은행이 고객에게 변동금리를 주는 대신 받고자하는 고정금리
+   - Bid금리란 조성은행이 고객에게 고정금리를 주는 대신 받고자하는 변동금리
+   - 고정금리 채권을 가지고 있는 투자자 A가 향후 금리가 상승할 것으로 전망하면, 변동금리로 스왑
 
 
 
-3. 선도이자율(Forward Rate)
+1. SB & FRN
 
-- 미래의 특정시점(n)에서 특정시점(n+1)까지의 Spot Rate
--  <sub>n</sub>f<sub>n+1</sub> 로 표시되며, n+1 시점의 가치를 n시점의 가치로 환산하는 Spot Rate
-- 선도이자율은 현물이자율을 통해 구해야하는 내재된 이자율
+   1) 고정금리 채권(Straight Bond)
+
+   - 정해진 기일에 고정된 이자를 지급하고, 정해진 만기에 원금을 지급하는 채권
+   - 대부분의 회사채, 국채 등이 고정금리부로 발행됨
+   - 향후 금리가 상승하면 채권가격의 하락이 예상되어 투자자 찾기가 어려움
+
+   
+
+   2) 변동금리 채권(Floating Rate Note)
+
+   - 지급이자율이 시장의 대표적인 금리에 연동되어 이자지급때마다 정기적으로 재조정
+
+   - 따라서 금리하락기에는 발행자에 유리하고, 금리 상승기에는 투자자에게 유리
+
+   - 지급이자율 = 기준금리 + 가산금리
+
+   - 장점(발행자) : 
+
+     - 고금리시기에 발행해도 향후 시장금리가 낮아질 경우 발행자 이익
+
+   - 단점(발행자) :
+
+     - 금리의 단고장저(단기금리高, 장기금리低) 현상이 지속될 경우 자금 비용이 상승
+
+       (장기금리로 고정금리 채권을 발행했으면 더 적은 이자비용을 낼 수 있었음)
+
+   - 장점(투자자) :
+
+     - 금리 상승시 이자소득 증가
+     - 보통 최저이율이 설정되어 있어 시장금리가 대폭 하락해도 일정액의 이자를 받음
+
+   - 단점(투자자):
+
+     - 금리 하락시 이자소득 감소
+
+   
+
+   ※ 따라서,
+
+   발행자 :	지금 금리가 너무 낮아서 아무도 채권을 사려하지 않아 자금조달이 어렵거나,
+
+   ​				향후 금리가 하락할 것으로 예상될 때 발행
+
+   
+
+   투자자 : 향후 금리가 상승할 것으로 예상될 때 투자
+
+   
+
+   
+
+   
+
+   
+
+   
+
+2. SPOT/YTM/FWD
+
+   1) 만기 수익률 (YTM)
+
+   - 현재의 가격에 내재된 채권의 수익률
+   - 만기 수익률 = 유통 수익률 = 내부수익률(투자수익률) = 시장수익률
+   - 투자자가 채권을 현재가격에 매입해서 만기일까지 보유하면 얻게되는 수익률 
+
+   
+
+   2) 현물 이자율(Spot Rate)
+
+   - 현재 시점에서 투자할 때 실현할 수 있는 만기별 연간 수익률
+   - 단, 만기까지 CashFlow가 한번만 발생(만기시점에) 하는 채권
+   - 즉, 무이표채(Zero-coupon bond)의 YTM = Spot Rate
+   - 또한, 미래 현금흐름을 현재가치로 할인하는 할인율의 의미로도 이용됨.
+
+   
+
+   3) 선도이자율(Forward Rate)
+
+   - 미래의 특정시점(n)에서 특정시점(n+1)까지의 Spot Rate
+   - <sub>n</sub>f<sub>n+1</sub> 로 표시되며, n+1 시점의 가치를 n시점의 가치로 환산하는 Spot Rate
+   - 선도이자율은 현물이자율을 통해 구해야하는 내재된 이자율
 
 
 
