--- a/금리채권/금리.md
+++ b/금리채권/금리.md
@@ -27,7 +27,7 @@
 
 - 기대수익률(금리) = 무위험이자율 + 위험 프리미엄
 - E(Ri) =  Rf  +  [E(Rm) - Rf] * Bi
-- 무위험 이자율 : 현재의 소비를 포기함을 대가로 요구하는 보상
+- 무위험 이자율 : 화폐의 시간적 가치를 고려한 것으로, 투자에 있어서 위험이 전혀 내포되지 않은 이자율
 - 위험 프리미엄 : 지급 불이행 위험에 대한 보상
 
 
@@ -74,7 +74,7 @@
    4) 기준금리
 
    - 한국은행 입장에서는 정책금리를 결정할 때
-   - 시중은행 입장에서는 예금/대출 금리를 때 근간이 되는 금리
+   - 시중은행 입장에서는 예금/대출 금리를 결정할 때 근간이 되는 금리
    - 시중은행에서는 KORIBOR 나 CD금리가 기준금리가 됨
    - 국제 시장에서는 영국의 RIBOR를 기준금리로 함
 
@@ -124,7 +124,7 @@
 - 적정 이자를 지급하고 만기에 원금을 갚는 차용증서
 - 차용증서와 다른 점 -> 만기 이전에 다른 투자자에게 할인하여 양도할 수 있음. 매매가능
 - 채권은 증권회사에서 거래되는 유가증권 
-- 채권의 금리는 고정금리 
+- 대부분의 채권 금리는 고정금리 
 - 따라서 변동하는 시장의 금리와 구분하기 위해 채권의 금리를 쿠폰금리(표면금리) 라고 함
 
 
