--- a/금리채권/금리 심화.md
+++ b/금리채권/금리 심화.md
@@ -94,5 +94,36 @@
    - <sub>n</sub>f<sub>n+1</sub> 로 표시되며, n+1 시점의 가치를 n시점의 가치로 환산하는 Spot Rate
    - 선도이자율은 현물이자율을 통해 구해야하는 내재된 이자율
 
+   
+   $$
+   _{n-1}f_{n} = \frac{(1+y_{n})^n}{(1+y_{n-1})^{n-1}} -1
+   $$
+   
+
+   
+
+   a. 한계수익률
+
+   	- 기간이 1년 증가할 때 얻을 수 있는 수익률
+   	- 투자자가 1년에 5%의 수익률을 얻었을 때, 
+   	- 1년을 추가로 투자하여 얻을 수 있는 수익률은 7%가 된다
+
+   b. 손익분기수익률
+
+   - 1년만기에 투자한 투자자가 1년도에 5%의 수익을 냈을 때, 
+   - 2년만기에 투자한 투자자와 수익이 같아지려면 
+   - 최소한 2년도에는 7%의 수익을 내야한다.
+
+   c. 확정이자율
+
+   - 투자자가 1년만기 5% 수익률의 채권을 사면 2년에는 7%의 수익을 내야한다
+   - 하지만 2년만기 6%의 채권에 투자하면 2년도의 수익을 확정하여 투자위험을 헤지할수있다
+
+
+
+
+
+
+
 
 
